apps/platform-status/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-status
  labels:
    app.kubernetes.io/part-of: platform-lab
    environment: local
