apps/platform-status/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-status
  namespace: platform-status
  labels:
    app.kubernetes.io/name: platform-status
    app.kubernetes.io/part-of: platform-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: platform-status
  template:
    metadata:
      labels:
        app.kubernetes.io/name: platform-status
        app.kubernetes.io/part-of: platform-lab
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:stable-alpine
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: website-content
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              readOnly: true

      volumes:
        - name: website-content
          configMap:
            name: platform-status-content
