apps/platform-status/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-status
  namespace: platform-status
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
  - host: platform.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: platform-status

            port:
              number: 80
